# to-trans

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  fasta.rs  gene.rs  lib.rs  main.rs  model.rs  utils.rs
src/model/: attr.rs
