[package]
name = "to-trans"
version = "0.1.0"
authors = ["alejandrogzi <jose.gonzalesdezavala1@unmsm.edu.pe>"]
edition = "2021"
license = "MIT"


[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "^1", features = ["derive"] }
thiserror = "1.0.50"
csv = "1.1.6"
seq_io = "0.3.2"
tempdir = "0.3.7"

[profile.release]
lto = true

[lib]
name = "to_trans"
path = "src/lib.rs"
