[package]
name = "to-trans"
version = "0.2.0"
authors = ["alejandrogzi <jose.gonzalesdezavala1@unmsm.edu.pe>"]
edition = "2021"
license = "MIT"
description = "A high-performance transcriptome builder from fasta + GTF/GFF"
homepage = "https://github.com/alejandrogzi/to-trans"
repository = "https://github.com/alejandrogzi/to-trans"
readme = "README.md"
keywords = ["transcriptome", "fasta", "gtf", "gff"]
categories = ["command-line-utilities", "science"]

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
thiserror = "1.0.50"
seq_io = "0.3.2"
tempdir = "0.3.7"
memchr = "2.6.4"
rayon = "1.5.1"
num_cpus = "1.13.0"
colored = "2.0.0"

[profile.release]
lto = true

[lib]
name = "to_trans"
path = "src/lib.rs"
